# metagenomedb

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  test.ipynb
.github/workflows/: lint.yml  unit-tests.yml
config/: genome_assembly.yaml
metagenomedb/: __init__.py  download_assembly_summary.py  preprocess_genome_assemblies.py
metagenomedb/genome_assemblies/: download.py  download_summary.py  io.py  partition.py  preprocess_summary.py
src/: download_genome_assemblies.py  preprocess_genome_assemblies.py
src/genome_assemblies/: __init__.py  download.py  download_summary.py  io.py  parallel_download.py  preprocess.py  retriever_multi.py
tests/: conftest.py  file1.txt  pytest.ini
tests/fixtures/: test_assembly_summary.txt  test_assembly_summary_preprocessed.txt  test_assembly_summary_preprocessed_queue.txt
tests/fixtures/mock_files/: file1.txt  file2.txt  file3.txt
tests/genome_assemblies/: test_download.py  test_download_summary.py  test_io.py  test_parallel_download.py  test_preprocess.py  test_preprocess_summary.py
