[tool.poetry]
name = "cicd-template"
version = "0.1.0"
description = "A template for CI/CD development tools."
authors = ["nicklamiller <nicklamiller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
pandas = "^2.0.3"
pydantic = "^2.1.1"
pycurl = "^7.45.2"
responses = "^0.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "1.6.0"
wemake-python-styleguide = "0.16.1"
unify = "^0.5"
isort = "^5.10.1"
flake8 = "4.0.1"
pre-commit = "^2.20.0"
coverage = "^6.5.0"
ipykernel = "^6.25.0"
types-pyyaml = "^6.0.12.11"
types-pycurl = "^7.45.2.4"
pytest-snapshot = "^0.9.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
